--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 
   </head>
   <body>
-    <div id="placeHolder">
 
+    <section>
+    <div id="placeHolder"></div>
+    <div id="">
+      <h5 id="wrongLetter">Letters guessed: </h5>
     </div>
-    <div id="wrongLetter">
 
-    </div>
-    <div id="numGuess">
+    <div id="numGuess"></div>
 
-    </div>
-  <script type="text/javascript" src="assets/javascript/game.js"></script>
+  </section>
+  <!-- <script type="text/javascript" src="assets/javascript/main.js"></script> -->
+  <script type="text/javascript" src="assets/javascript/bundle.js"></script>
+
   </body>
 </html>
