Adding comments and refactoring code

--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
 
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/main.css">
+<head>
+  <meta charset="utf-8">
+  <title></title>
 
-  </head>
-  <body>
+  <link rel="stylesheet" href="assets/css/reset.css">
+  <link rel="stylesheet" href="assets/css/main.css">
 
-    <section>
+</head>
+
+<body>
+
+  <header>
+    <h1>Hangman</h1>
+  </header>
+
+  <section>
     <div id="placeHolder"></div>
-    <div id="">
+    <div>
       <h5 id="wrongLetter">Letters guessed: </h5>
+      <span class ="guess_text">Guess</span>
+      <h5 id="numGuess"></h5>
     </div>
 
-    <div id="numGuess"></div>
-
   </section>
-  <!-- <script type="text/javascript" src="assets/javascript/main.js"></script> -->
-  <script type="text/javascript" src="assets/javascript/bundle.js"></script>
+  <script type="text/javascript" src="assets/javascript/main.js"></script>
+</body>
 
-  </body>
 </html>
